@@ -1,4 +1,4 @@
-import React, { PropsWithChildren} from "react";
+import React, { PropsWithChildren, useState } from "react";
 import { Checkbox, CheckboxProps } from "./Checkbox";
 import { twMerge } from "tailwind-merge";
 import { DocumentIcon } from "@heroicons/react/24/outline";
@@ -6,7 +6,7 @@ import { DocumentIcon } from "@heroicons/react/24/outline";
 const variantStyles = {
   default: "border-2 border-purple-700",
   hover: "border-2 hover:ring-purple-700 hover:border-purple-700",
-  focus: "border-4 focus-within:border-4 focus-within:border-[#D1C4E9] focus-within:outline-none focus-within:ring-2 focus-within:ring-[#D1C4E9]",
+  focus: "border-4 focus:border-[#D1C4E9] outline-none border-[#D1C4E9]",
   disabled: "border-2 bg-[#EDE7F6] outline-none text-[#828282]",
 };
 
@@ -15,11 +15,14 @@ export const CheckboxDefault: React.FC<PropsWithChildren<CheckboxProps>> = ({
   description = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus.",
   title = "Title",
 }) => {
+  const [isChecked, setIsChecked] = useState(false);
   return (
     <Checkbox
       checkboxPosition="left"
+      checked={isChecked}
       className={twMerge(`${variantStyles.default} ${className}`)}
       description={description}
+      onChange={setIsChecked}
       title={title}
     />
   );
@@ -30,11 +33,14 @@ export const CheckboxHover: React.FC<PropsWithChildren<CheckboxProps>> = ({
   description = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus.",
   title = "Title",
 }) => {
+  const [isChecked, setIsChecked] = useState(false);
   return (
     <Checkbox
       checkboxPosition="left"
+      checked={isChecked}
       className={twMerge(`${variantStyles.hover} ${className}`)}
       description={description}
+      onChange={setIsChecked}
       title={title}
     />
   );
@@ -45,11 +51,14 @@ export const CheckboxFocus: React.FC<PropsWithChildren<CheckboxProps>> = ({
   description = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus.",
   title = "Title",
 }) => {
+  const [isChecked, setIsChecked] = useState(false);
   return (
     <Checkbox
       checkboxPosition="left"
+      checked={isChecked}
       className={twMerge(`${variantStyles.focus} ${className}`)}
       description={description}
+      onChange={setIsChecked}
       title={title}
     />
   );
@@ -60,19 +69,20 @@ export const CheckboxDisabled: React.FC<PropsWithChildren<CheckboxProps>> = ({
   description = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus.",
   title = "Title",
 }) => {
+  const [isChecked, setIsChecked] = useState(true);
   return (
     <Checkbox
       checkboxPosition="left"
-      checked={true}
+      checked={isChecked}
       className={twMerge(`${variantStyles.disabled} ${className}`)}
       description={description}
       disabled={true}
+      onChange={setIsChecked}
       title={title}
-      
     />
   );
 };
-67374198260
+67374198260;
 export const CheckboxDefaultIcon: React.FC<
   PropsWithChildren<CheckboxProps>
 > = ({
@@ -81,11 +91,14 @@ export const CheckboxDefaultIcon: React.FC<
   icon,
   title = "Title",
 }) => {
+  const [isChecked, setIsChecked] = useState(false);
   return (
     <Checkbox
+      checked={isChecked}
       className={twMerge(`${variantStyles.default} ${className}`)}
       description={description}
       icon={icon || <DocumentIcon className="w-2 h-2 text-purple-600 " />}
+      onChange={setIsChecked}
       showIcon={true}
       title={title}
     />
@@ -98,11 +111,14 @@ export const CheckboxHoverIcon: React.FC<PropsWithChildren<CheckboxProps>> = ({
   icon,
   title = "Title",
 }) => {
+  const [isChecked, setIsChecked] = useState(false);
   return (
     <Checkbox
+      checked={isChecked}
       className={twMerge(`${variantStyles.hover} ${className}`)}
       description={description}
       icon={icon || <DocumentIcon className="w-2 h-2 text-purple-600 " />}
+      onChange={setIsChecked}
       showIcon={true}
       title={title}
     />
@@ -115,11 +131,14 @@ export const CheckboxFocusIcon: React.FC<PropsWithChildren<CheckboxProps>> = ({
   icon,
   title = "Title",
 }) => {
+  const [isChecked, setIsChecked] = useState(false);
   return (
     <Checkbox
+      checked={isChecked}
       className={twMerge(`${variantStyles.focus} ${className}`)}
       description={description}
       icon={icon || <DocumentIcon className="w-2 h-2 text-purple-600 " />}
+      onChange={setIsChecked}
       showIcon={true}
       title={title}
     />
@@ -134,9 +153,10 @@ export const CheckboxDisabledIcon: React.FC<
   icon,
   title = "Title",
 }) => {
+  const [isChecked] = useState(true);
   return (
     <Checkbox
-      checked={true}
+      checked={isChecked}
       className={twMerge(`${variantStyles.disabled} ${className}`)}
       description={description}
       disabled={true}
