@@ -4,7 +4,7 @@ import { ChipsComponents } from "@/modules/library/components/atoms/chips";
 import { Date } from "../modules/library/components/atoms/date/Date";
 import { TextAreaComponents } from "@/modules/library/components/atoms/textarea";
 import { Tooltip } from "../modules/library/components/atoms/tooltip/Tooltip";
-import { CheckboxGroup } from "../modules/library/components/atoms/checkbox/CheckboxGroup";
+import { CheckboxGroup} from "../modules/library/components/atoms/checkbox/CheckboxGroup";
 
 import {
   AlertFilled,
@@ -1625,16 +1625,17 @@ export default function Home() {
         <div className="flex flex-col items-center justify-center min-h-screen space-y-4">
           <CheckboxComponent.CheckboxDefault />
           <CheckboxComponent.CheckboxHover />
-          <CheckboxComponent.CheckboxFocus />
+          <CheckboxComponent.CheckboxFocus  />
           <CheckboxComponent.CheckboxDisabled />
         </div>
         <div className="flex flex-col items-center justify-center min-h-screen space-y-4">
-          <CheckboxComponent.CheckboxDefaultIcon checked={isChecked}/>
-          <CheckboxComponent.CheckboxHoverIcon />
-          <CheckboxComponent.CheckboxFocusIcon />
-          <CheckboxComponent.CheckboxDisabledIcon />
+          <CheckboxComponent.CheckboxDefaultIcon  /> 
+          <CheckboxComponent.CheckboxHoverIcon  />
+          <CheckboxComponent.CheckboxFocusIcon  />
+          <CheckboxComponent.CheckboxDisabledIcon  />
         </div>
         <div className="flex flex-col items-center justify-center min-h-screen space-y-4">
+          <CheckboxGroup checked={isChecked} onChange={setIsChecked} />
           <CheckboxGroup checked={isChecked} onChange={setIsChecked} />
         </div>
       </div>
